Remove Google Guava dependency
Remove Google Guava dependency in favor of Java implementation of
immutables (Java 9 Collection factories) and null checks.